--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gulp-rev-napkin": "^0.1.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-size": "^2.0.0",
-    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "imagemin-jpegoptim": "^4.1.0",
     "imagemin-optipng": "^4.3.0",
@@ -33,6 +32,7 @@
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "rucksack-css": "^0.8.5",
+    "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
