--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babelify": "^7.2.0",
+    "browser-sync": "^2.10.1",
     "del": "^2.2.0",
     "envify": "^3.4.0",
     "gulp": "github:gulpjs/gulp#4.0",
