--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "babelify": "^7.2.0",
     "browser-sync": "^2.10.1",
+    "browserify": "^13.0.0",
+    "browserify-incremental": "^3.0.1",
     "del": "^2.2.0",
     "envify": "^3.4.0",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -28,7 +30,6 @@
     "imagemin-optipng": "^4.3.0",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
-    "persistify": "^1.0.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-import": "^7.1.3",
     "rucksack-css": "^0.8.5",
