--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rucksack-css": "^0.8.5",
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
