--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "imagemin-optipng": "^4.3.0",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
+    "minifyify": "^7.3.3",
     "postcss-cssnext": "^2.4.0",
     "postcss-import": "^7.1.3",
     "rucksack-css": "^0.8.5",
